collects/tests/typed-scheme/fail/check-expect-fail.ss
#lang typed/scheme

(require test-engine/scheme-tests)
(check-expect 3 (+ 1 'foo))

(test)
